# mwe

./: Cargo.toml
src/: main.rs
