[package]
name = "mwe"
version = "0.1.0"
authors = ["Emanuele Dalla Longa (infinitesnow) <3xplosive.g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "~0.3.8"
wgpu-subscriber = "~0.1.0"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu-rs"
features = ["trace"]

[dependencies.winit]
version = "~0.23.0"
default-features = false
features = [ "x11" ]

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "316c5a70fdc4a052fb65ef82bf02d52107b5671b" }
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "316c5a70fdc4a052fb65ef82bf02d52107b5671b" }
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "316c5a70fdc4a052fb65ef82bf02d52107b5671b" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen", rev = "316c5a70fdc4a052fb65ef82bf02d52107b5671b" }